スマホ版のトップと、メディアクエリ調整

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -5,7 +5,7 @@
 </head>
 <body onload="initialize();">
 	<section id="banner">
-		<div class="symbols">
+		<div class="symbols media-pc">
 			<img src="./images/top/01.png" alt="" class="js-randomFade symbol_01">
 			<img src="./images/top/02.png" alt="" class="js-randomFade symbol_02">
 			<img src="./images/top/03.png" alt="" class="js-randomFade symbol_03">
@@ -18,6 +18,20 @@
 			<img src="./images/top/10.png" alt="" class="js-randomFade symbol_10">
 			<img src="./images/top/11.png" alt="" class="js-randomFade symbol_11">
 			<img src="./images/top/12.png" alt="" class="js-randomFade symbol_12">
+		</div>
+		<div class="symbols-sp media-tb">
+			<img src="./images/top/sp/01.png" alt="" class="js-randomFade symbol_01">
+			<img src="./images/top/sp/02.png" alt="" class="js-randomFade symbol_02">
+			<img src="./images/top/sp/03.png" alt="" class="js-randomFade symbol_03">
+			<img src="./images/top/sp/04.png" alt="" class="js-randomFade symbol_04">
+			<img src="./images/top/sp/05.png" alt="" class="js-randomFade symbol_05">
+			<img src="./images/top/sp/06.png" alt="" class="js-randomFade symbol_06">
+			<img src="./images/top/sp/07.png" alt="" class="js-randomFade symbol_07">
+			<img src="./images/top/sp/08.png" alt="" class="js-randomFade symbol_08">
+			<img src="./images/top/sp/09.png" alt="" class="js-randomFade symbol_09">
+			<img src="./images/top/sp/10.png" alt="" class="js-randomFade symbol_10">
+			<img src="./images/top/sp/11.png" alt="" class="js-randomFade symbol_11">
+			<img src="./images/top/sp/12.png" alt="" class="js-randomFade symbol_12">
 		</div>
 		<div class="title">
 			<img class="takuten" src="./images/top/takuten.png" alt="">
@@ -33,7 +47,7 @@
 				<section class="about js-progress" id="about">
 					<h2><img src="./images/about/h2.png" alt="開催概要"></h2>
 					<h3 class="media-pc"><img src="./images/about/h3.png" alt="デザインを学ぶ学生による12のプロジェクトの成果発表・展示会"></h3>
-					<h3 class="media-u-tablet"><img src="./images/about/h3-sp.png" alt="デザインを学ぶ学生による12のプロジェクトの成果発表・展示会"></h3>
+					<h3 class="media-tb"><img src="./images/about/h3-sp.png" alt="デザインを学ぶ学生による12のプロジェクトの成果発表・展示会"></h3>
 					<p>「卓展」とは、名古屋市立大学芸術工学部の学生による作品展示会です。<br>
 						プロジェクトに賛同した人々が卓を囲むように集まることから「卓展」となりました。</p>
 					<p>学部４年生をリーダーとして多種多様なジャンルのプロジェクトを立ち上げ、<br>学科・学年の垣根を越えて制作を行います。</p>
@@ -60,7 +74,7 @@
 				<section class="map js-progress" id="map">
 					<h2><img src="./images/map/h2.png" alt="会場マップ"></h2>
 					<p class="floor-map media-pc"><img src="./images/map/map.png" alt="会場マップ"></p>
-					<p class="floor-map media-u-tablet"><img src="./images/map/map-sp.png" alt="会場マップ"></p>
+					<p class="floor-map media-tb"><img src="./images/map/map-sp.png" alt="会場マップ"></p>
 				</section>
 				<section class="intro js-randomList" id="intro">
 					<h2><img src="./images/detail/h2.png" alt="卓紹介"></h2>
