--- a/app/source/scss/_intro.scss
+++ b/app/source/scss/_intro.scss
@@ -2,7 +2,7 @@
     .p-text {
         left: 0;
         width: 480px;
-        @include media(u-tablet) {
+        @include media(tb) {
             left: 2.5%;
             width: 95%;
         }
@@ -10,7 +10,7 @@
     }
     .p-logo {
         z-index: 1;
-        @include media(u-tablet) {
+        @include media(tb) {
             width: 50%;
             max-width: 340px;
             height: auto;
@@ -20,7 +20,7 @@
         z-index: 0;
     }
     .p-img2 {
-        @include media(u-tablet) {
+        @include media(tb) {
             display: none;
         }
     }
