--- a/app/source/scss/_setting.scss
+++ b/app/source/scss/_setting.scss
@@ -13,17 +13,17 @@ $blue: #053077;
 //メディアクエリ
 @mixin media($media-width) {
 	@if $media-width == sp {
-		@media only screen and (max-width: 767px){
+		@media only screen and (min-width: 320px){
 			@content;
 		}
 	}
-	@else if $media-width == tablet {
-		@media only screen and (min-width: 768px) and (max-width: 1279px){
+	@else if $media-width == tb {
+		@media only screen and (max-width: 870px){
 			@content;
 		}
 	}
-	@else if $media-width == u-tablet {
-		@media only screen and (max-width: 1279px){
+	@else if $media-width == minipc {
+		@media only screen and (min-width: 871px) and (max-width: 1279px){
 			@content;
 		}
 	}
