スマホのintro調整ちゅ

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -79,125 +79,125 @@
 				<section class="intro js-randomList" id="intro">
 					<h2><img src="./images/detail/h2.png" alt="卓紹介"></h2>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="branco">
+						<div class="p-logo"><img src="./images/detail/branco/logo.png" alt="" data-enllax-ratio="0.05" data-enllax-type="foreground"></div>
+						<div class="p-img1"><img src="./images/detail/branco/1.png" alt="" data-enllax-ratio="-0.03" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>ブランディングデザインを学ぶ。</h3>
 							<p>地域の商店街を参考に、店舗のブランドづくりの流れをグラフィックデザインの観点からみて学び、制作します。成果物は実在する店舗に新たな独自のコンセプトを設定したそれぞれのブランディングデザインに関わるもの全て。ロゴ、VI、パッケージなど必要なアプリケーションを、統一した世界観を持って制作することで様々な媒体への印刷の知識や素材の仕組みも勉強していきます。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/branco/logo.png" alt="" data-enllax-ratio="0.05" data-enllax-type="foreground"></div>
-						<div class="p-img1 b"><img src="./images/detail/branco/1.png" alt="" data-enllax-ratio="-0.03" data-enllax-type="foreground"></div>
-						<div class="p-img2 s mini"><img src="./images/detail/branco/2.png" alt="" data-enllax-ratio="-0.08" data-enllax-type="foreground"></div>
-						<div class="p-img3 g mini"><img src="./images/detail/branco/3.png" alt="" data-enllax-ratio="0.08" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/branco/2.png" alt="" data-enllax-ratio="-0.08" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/branco/3.png" alt="" data-enllax-ratio="0.08" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="brica">
+						<div class="p-logo"><img src="./images/detail/brica/logo.png" alt="" data-enllax-ratio="0.05" data-enllax-type="foreground"></div>
+						<div class="p-img1 s"><img src="./images/detail/brica/1.png" alt="" data-enllax-ratio="-0.03" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>プロダクト・インテリアデザインを学ぶ。</h3>
 							<p>この卓は、プロダクトデザイン視点から照明器具を作る卓です。テーマは、特別な時間を演出する照明で、自分の実体験や経験から様々なアイデアを展開していき、具体的なシーンを設定します。そこからセグメンテーションによって、照明の光り方・形を客観的に捉え、インテリアマッチの観点から素材・形状検討をし、最終製作へ移っていきます。芸工では、コンセプトワークや調査などの部分に時間をかける傾向にあるため、 本卓では" 作る”という工程に重きをおいています。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/brica/logo.png" alt="" data-enllax-ratio="0.05" data-enllax-type="foreground"></div>
-						<div class="p-img1 s"><img src="./images/detail/brica/1.png" alt="" data-enllax-ratio="-0.03" data-enllax-type="foreground"></div>
-						<div class="p-img2 b mini"><img src="./images/detail/brica/2.png" alt="" data-enllax-ratio="-0.08" data-enllax-type="foreground"></div>
-						<div class="p-img3 g"><img src="./images/detail/brica/3.png" alt="" data-enllax-ratio="0.08" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/brica/2.png" alt="" data-enllax-ratio="-0.08" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/brica/3.png" alt="" data-enllax-ratio="0.08" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="san65">
+						<div class="p-logo"><img src="./images/detail/365/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img1 s"><img src="./images/detail/365/1.png" alt="" data-enllax-ratio="-0.06" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>プロダクトデザインを基礎から学ぶ。</h3>
 							<p>プロダクトデザインを基礎から学び、体験する卓。<br>
 							「365日、毎日使う家電」をテーマとして、様々なデザイン手法を通して生活者のニーズを探り当てることでより深く質の高いアイデアから、多くの共感を得ることのできるアウトプットにつなげる。“明日から使いたい” を目標に、今までにない価値のある生活家電を提案する。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/365/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
-						<div class="p-img1 s"><img src="./images/detail/365/1.png" alt="" data-enllax-ratio="-0.06" data-enllax-type="foreground"></div>
-						<div class="p-img2 g mini"><img src="./images/detail/365/2.png" alt="" data-enllax-ratio="-0.09" data-enllax-type="foreground"></div>
-						<div class="p-img3 b"><img src="./images/detail/365/3.png" alt="" data-enllax-ratio="0.1" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/365/2.png" alt="" data-enllax-ratio="-0.09" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/365/3.png" alt="" data-enllax-ratio="0.1" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="gafe">
+						<div class="p-logo"><img src="./images/detail/gafe/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img1"><img src="./images/detail/gafe/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>ゲーミフィケーションのなんとか</h3>
 							<p>チームそれぞれにおいて、まず現代社会に存在する問題点について様々な案を出し、その中から扱う社会問題を決定し、その社会問題をゲームを通してどう解決していくか、ゲームを通してユーザーに届けるためにはどういうゲームシステムにするかなど、ゲーミフィケーションの考えのもとゲームを制作を行っている卓です。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/gafe/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
-						<div class="p-img1 g"><img src="./images/detail/gafe/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img2 b mini"><img src="./images/detail/gafe/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img3 s"><img src="./images/detail/gafe/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/gafe/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/gafe/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="doodle">
+						<div class="p-logo"><img src="./images/detail/doodle/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img1"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>遊び心を取り入れたWeb制作</h3>
 							<p>Googleのアプリケーションに多く見られる遊び心を参考にし取り入れたWeb制作を行う卓です。Webサイト・アプリケーション・ゲームなどジャンルは問わず、個人制作・グループ制作も問いません。また、DoodleでのWeb制作は実践から入るので、UXデザインという小難しい考え方をより身近に感じることができます。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/doodle/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
-						<div class="p-img1 b"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img2 s mini"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img3 g"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="res">
+						<div class="p-logo"><img src="./images/detail/res/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img1"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>サンプルテキスト</h3>
 							<p>使ったものを再利用して、新たなものを作る卓です。周りにあるものを見つめ直し、アイデアの出し方を学びます。前半はグループ制作、後半は個人制作を行います。グループ制作では制作物を『椅子』と指定、個人制作では制作物の指定はせず『自分の欲しいもの』をテーマに家具や雑貨などを制作します。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/res/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
-						<div class="p-img1 g"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img2 s mini"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img3 b"><img src="./images/detail/res/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/res/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="careco">
+						<div class="p-logo"><img src="./images/detail/careco/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img1 s"><img src="./images/detail/careco/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>カーデザインを学ぶ。</h3>
 							<p>車をデザインする卓です。プロダクトデザインとカラーデザインの二種類から選んでもらい個人制作をします。プロダクトデザイン最終提案物は提案パネルとクレイモック、カラーデザインは提案パネルと外板モデル、簡単なモデルになります。週二回活動しており、火曜日は提案のプレゼン・エスキース等、金曜日はスケッチ力を向上するためにスケッチ会を行っています。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/careco/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
-						<div class="p-img1 s"><img src="./images/detail/careco/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img2 b mini"><img src="./images/detail/careco/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img3 g"><img src="./images/detail/careco/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/careco/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/careco/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="irodori">
+						<div class="p-logo"><img src="./images/detail/irodori/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img1"><img src="./images/detail/irodori/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>色について学び、想像し、表現する。</h3>
 							<p>色について学ぶことで、色の持つ意味や効果を想像したり、他人と共有したり、自信や根拠を持った配色ができるようになることが目標である。制作では、グラフィックを考えたり、各々が表現に適すると思う素材を選択・加工したりしながら、そこで使用する色を意識した作品作りを行う。展示空間も、色を生かしたこだわりのあるものにしたいと考えている。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/irodori/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
-						<div class="p-img1 b"><img src="./images/detail/irodori/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img2 g mini"><img src="./images/detail/irodori/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img3 s"><img src="./images/detail/irodori/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/irodori/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/irodori/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="mixm">
+						<div class="p-logo"><img src="./images/detail/mixm/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img1"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>遊び心を取り入れたWeb制作</h3>
 							<p>芸工生それぞれの専攻するものをミックスし、アート作品を制作する卓。作品のテーマには"予感"を設定し、メンバーそれぞれの思う"予感"について表現する。映像、サウンド、プログラミング、造形美術、テキスタイルなど、あらゆるジャンルの組合せの可能性を探る。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/mixm/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
-						<div class="p-img1 g"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img2 s mini"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img3 b"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="glyph">
+						<div class="p-logo"><img src="./images/detail/glyph/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img1 s"><img src="./images/detail/glyph/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>文字遊びを楽しむ。</h3>
 							<p>文字に関連した作品を作る卓です。タイポグラフィやフォント制作に関することを勉強していきます。初めに全員で同じテーマのもと、自由にアイデア出しを行い一つのフォントを制作します。最終制作物にはテーマなどは設けず、自由に個人制作を行ってもらいます。また、展示の空間デザインや卓のポートフォリオ制作も行う予定です。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/glyph/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
-						<div class="p-img1 s"><img src="./images/detail/glyph/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img2 b mini"><img src="./images/detail/glyph/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img3 g"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/glyph/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="wavwav">
+						<div class="p-logo"><img src="./images/detail/wavwav/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img1"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>遊び心を取り入れたWeb制作</h3>
 							<p>3~4人ずつのグループに別れて音楽を制作する卓。グループごとにテーマを掲げ、そのテーマにそってメンバー各々が制作した楽曲を合わせて１つの作品とする。殆どのメンバーがDTMによる音楽制作に初挑戦ながら、短期間の間で基本的なDAWの操作からスケールなどの簡単な音楽理論などを学び、1から音楽制作に取り組む。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/wavwav/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
-						<div class="p-img1 b"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img2 s mini"><img src="./images/detail/wavwav/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img3 g"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/wavwav/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					</section>
 					<section class="intro-detail js-parallax js-progress js-randomListItem js-scrollFadein" id="jackin">
+						<div class="p-logo"><img src="./images/detail/jackin/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img1"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>遊び心を取り入れたWeb制作</h3>
 							<p>3~4人ずつのグループに別れて音楽を制作する卓。グループごとにテーマを掲げ、そのテーマにそってメンバー各々が制作した楽曲を合わせて１つの作品とする。殆どのメンバーがDTMによる音楽制作に初挑戦ながら、短期間の間で基本的なDAWの操作からスケールなどの簡単な音楽理論などを学び、1から音楽制作に取り組む。</p>
 						</div>
-						<div class="p-logo"><img src="./images/detail/jackin/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
-						<div class="p-img1 b"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img2 s mini"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
-						<div class="p-img3 g"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+						<div class="p-img2"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+						<div class="p-img3"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					</section>
 				</section>
 				<section class="access js-progress" id="access">
