--- a/app/source/scss/_setting.scss
+++ b/app/source/scss/_setting.scss
@@ -13,7 +13,7 @@ $blue: #053077;
 //メディアクエリ
 @mixin media($media-width) {
 	@if $media-width == sp {
-		@media only screen and (min-width: 320px){
+		@media only screen and (min-width: 320px) and (max-width: 879px){
 			@content;
 		}
 	}
