jsの読み込み順とgooglemapAPIの呼び出し場所を変更

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -3,7 +3,7 @@
 <head>
 	<% include _head %>
 </head>
-<body onload="initialize();">
+<body>
 	<section id="banner">
 		<div class="symbols media-pc">
 			<img src="./images/top/01.png" alt="" class="js-randomFade symbol_01">
